--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,1 +1,13 @@
+name: Hello world
 
+on:
+  push:
+    branches:
+      - master
+
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+
+    steps:
+      - run: echo "Hello, world!"
