--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,4 +1,4 @@
-name: Hello world
+name: Create repository on push
 
 on:
   push:
@@ -6,8 +6,24 @@ on:
       - master
 
 jobs:
-  hello:
+  create-repo:
     runs-on: ubuntu-latest
 
     steps:
-      - run: echo "Hello, world!"
+      - name: Check if repository exists
+        run: |
+          if [ -d "$GITHUB_REPOSITORY" ]; then
+            echo "Repository already exists"
+            exit 0
+          fi
+
+      - name: Create repository
+        run: |
+          git init
+          git add .
+          git commit -m "Initial commit"
+          git push -u origin master
+
+      - name: Set branch to master
+        run: |
+          git checkout master
